따릉이 데이터 이상치 제외 및 전처리 완료

--- a/Preprocessing.ipynb
+++ b/Preprocessing.ipynb
@@ -11423,6 +11423,683 @@
     "bike_2018.to_csv(\"bike_2018.csv\",index=False,encoding=\"euc-kr\")\n",
     "bike_2019.to_csv(\"bike_2019.csv\",index=False,encoding=\"euc-kr\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 이상치 제외\n",
+    "```\n",
+    "이동거리 0.75+2IQR 초과 -> 극단적으로 많은 거리 이동\n",
+    "이용시간 0.75+2IQR 초과 -> 극단적으로 오랜시간 이용\n",
+    "속력 35이상인경우 -> 자전거의경우 25km/h만 넘어가도 상당히 빠르다, 또한 상급 동호인들의 경우에나 40km/h이상의 속력을 내기도 한다\n",
+    "속력 5 미만 -> 걷는속력이 보통 4\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12140.0"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 이상치 수준 확인\n",
+    "np.quantile(bike_2018.이용거리_M,0.75)+(2*(np.quantile(bike_2018.이용거리_M,0.75)-np.percentile(bike_2018.이용거리_M,25)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bike_2016=pd.read_csv(\"bike_2016.csv\",encoding=\"euc-kr\")\n",
+    "bike_2017=pd.read_csv(\"bike_2017.csv\",encoding=\"euc-kr\")\n",
+    "bike_2018=pd.read_csv(\"bike_2018.csv\",encoding=\"euc-kr\")\n",
+    "bike_2019=pd.read_csv(\"bike_2019.csv\",encoding=\"euc-kr\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def out_outlier(data):\n",
+    "    dist=0\n",
+    "    time=0\n",
+    "    dist=np.quantile(data.이용거리_M,0.75)+(2*(np.quantile(data.이용거리_M,0.75)-np.quantile(data.이용거리_M,0.25)))\n",
+    "    time=np.quantile(data.이용시간_분,0.75)+(2*(np.quantile(data.이용시간_분,0.75)-np.quantile(data.이용시간_분,0.25)))\n",
+    "#     아웃라이어 제거\n",
+    "    a=data[~((data.이용거리_M>dist)|(data.이용시간_분>time))]\n",
+    "#     시속 5이상 35미만\n",
+    "    a=a[(a.시속>=5)&(a.시속<35)]\n",
+    "    return a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bike_2016=out_outlier(bike_2016)\n",
+    "bike_2017=out_outlier(bike_2017)\n",
+    "bike_2018=out_outlier(bike_2018)\n",
+    "bike_2019=out_outlier(bike_2019)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(bike_2016.대여일시[0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 대여일시 년-월-일만 남김"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "bike_2016.대여일시=bike_2016.대여일시.apply(lambda a:a.split(\" \")[0])\n",
+    "bike_2017.대여일시=bike_2017.대여일시.apply(lambda a:a.split(\" \")[0])\n",
+    "bike_2018.대여일시=bike_2018.대여일시.apply(lambda a:a.split(\" \")[0])\n",
+    "bike_2019.대여일시=bike_2019.대여일시.apply(lambda a:a.split(\" \")[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2016-01-01'"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bike_2016.대여일시[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>대여일시</th>\n",
+       "      <th>대여소번호</th>\n",
+       "      <th>이용시간_분</th>\n",
+       "      <th>이용거리_M</th>\n",
+       "      <th>시속</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2016-01-01</td>\n",
+       "      <td>112</td>\n",
+       "      <td>24</td>\n",
+       "      <td>4140</td>\n",
+       "      <td>10.350000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2016-01-01</td>\n",
+       "      <td>113</td>\n",
+       "      <td>24</td>\n",
+       "      <td>2850</td>\n",
+       "      <td>7.125000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2016-01-01</td>\n",
+       "      <td>211</td>\n",
+       "      <td>7</td>\n",
+       "      <td>1020</td>\n",
+       "      <td>8.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2016-01-01</td>\n",
+       "      <td>113</td>\n",
+       "      <td>22</td>\n",
+       "      <td>2850</td>\n",
+       "      <td>7.702703</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2016-01-01</td>\n",
+       "      <td>335</td>\n",
+       "      <td>19</td>\n",
+       "      <td>2190</td>\n",
+       "      <td>6.843750</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1548617</th>\n",
+       "      <td>2016-12-31</td>\n",
+       "      <td>199</td>\n",
+       "      <td>8</td>\n",
+       "      <td>1490</td>\n",
+       "      <td>11.461538</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1548618</th>\n",
+       "      <td>2016-12-31</td>\n",
+       "      <td>115</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1100</td>\n",
+       "      <td>15.714286</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1548619</th>\n",
+       "      <td>2016-12-31</td>\n",
+       "      <td>623</td>\n",
+       "      <td>3</td>\n",
+       "      <td>770</td>\n",
+       "      <td>15.400000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1548620</th>\n",
+       "      <td>2016-12-31</td>\n",
+       "      <td>320</td>\n",
+       "      <td>7</td>\n",
+       "      <td>740</td>\n",
+       "      <td>6.166667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1548621</th>\n",
+       "      <td>2016-12-31</td>\n",
+       "      <td>340</td>\n",
+       "      <td>21</td>\n",
+       "      <td>5060</td>\n",
+       "      <td>14.457143</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1290890 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               대여일시  대여소번호  이용시간_분  이용거리_M         시속\n",
+       "0        2016-01-01    112      24    4140  10.350000\n",
+       "1        2016-01-01    113      24    2850   7.125000\n",
+       "2        2016-01-01    211       7    1020   8.500000\n",
+       "3        2016-01-01    113      22    2850   7.702703\n",
+       "4        2016-01-01    335      19    2190   6.843750\n",
+       "...             ...    ...     ...     ...        ...\n",
+       "1548617  2016-12-31    199       8    1490  11.461538\n",
+       "1548618  2016-12-31    115       4    1100  15.714286\n",
+       "1548619  2016-12-31    623       3     770  15.400000\n",
+       "1548620  2016-12-31    320       7     740   6.166667\n",
+       "1548621  2016-12-31    340      21    5060  14.457143\n",
+       "\n",
+       "[1290890 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bike_2016"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 일별 대여소별 대여 횟수 구하기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>대여일시</th>\n",
+       "      <th>대여소번호</th>\n",
+       "      <th>이용시간_분</th>\n",
+       "      <th>이용거리_M</th>\n",
+       "      <th>시속</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>114</th>\n",
+       "      <td>2016-01-01</td>\n",
+       "      <td>101</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1020</td>\n",
+       "      <td>10.200000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>115</th>\n",
+       "      <td>2016-01-01</td>\n",
+       "      <td>101</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1060</td>\n",
+       "      <td>10.600000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>390</th>\n",
+       "      <td>2016-01-01</td>\n",
+       "      <td>101</td>\n",
+       "      <td>21</td>\n",
+       "      <td>3340</td>\n",
+       "      <td>9.542857</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           대여일시  대여소번호  이용시간_분  이용거리_M         시속\n",
+       "114  2016-01-01    101       6    1020  10.200000\n",
+       "115  2016-01-01    101       6    1060  10.600000\n",
+       "390  2016-01-01    101      21    3340   9.542857"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bike_2016[(bike_2016.대여일시=='2016-01-01')&(bike_2016.대여소번호==101)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>대여일시</th>\n",
+       "      <th>대여소번호</th>\n",
+       "      <th>이용시간_분</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2016-01-01</td>\n",
+       "      <td>101</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2016-01-01</td>\n",
+       "      <td>102</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2016-01-01</td>\n",
+       "      <td>104</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2016-01-01</td>\n",
+       "      <td>105</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2016-01-01</td>\n",
+       "      <td>106</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>96440</th>\n",
+       "      <td>2016-12-31</td>\n",
+       "      <td>927</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>96441</th>\n",
+       "      <td>2016-12-31</td>\n",
+       "      <td>928</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>96442</th>\n",
+       "      <td>2016-12-31</td>\n",
+       "      <td>931</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>96443</th>\n",
+       "      <td>2016-12-31</td>\n",
+       "      <td>932</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>96444</th>\n",
+       "      <td>2016-12-31</td>\n",
+       "      <td>933</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>96445 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             대여일시  대여소번호  이용시간_분\n",
+       "0      2016-01-01    101       3\n",
+       "1      2016-01-01    102      11\n",
+       "2      2016-01-01    104       3\n",
+       "3      2016-01-01    105       3\n",
+       "4      2016-01-01    106       4\n",
+       "...           ...    ...     ...\n",
+       "96440  2016-12-31    927       2\n",
+       "96441  2016-12-31    928       2\n",
+       "96442  2016-12-31    931      13\n",
+       "96443  2016-12-31    932       5\n",
+       "96444  2016-12-31    933       8\n",
+       "\n",
+       "[96445 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bike_2016.groupby(['대여일시','대여소번호']).count().reset_index().iloc[:,0:3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bike2016_count=bike_2016.groupby(['대여일시','대여소번호']).count().reset_index().iloc[:,0:3]\n",
+    "bike2017_count=bike_2017.groupby(['대여일시','대여소번호']).count().reset_index().iloc[:,0:3]\n",
+    "bike2018_count=bike_2018.groupby(['대여일시','대여소번호']).count().reset_index().iloc[:,0:3]\n",
+    "bike2019_count=bike_2019.groupby(['대여일시','대여소번호']).count().reset_index().iloc[:,0:3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bike2016_count.columns=[\"대여일시\",\"대여소번호\",\"count\"]\n",
+    "bike2017_count.columns=[\"대여일시\",\"대여소번호\",\"count\"]\n",
+    "bike2018_count.columns=[\"대여일시\",\"대여소번호\",\"count\"]\n",
+    "bike2019_count.columns=[\"대여일시\",\"대여소번호\",\"count\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 267,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>대여일시</th>\n",
+       "      <th>대여소번호</th>\n",
+       "      <th>count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>501796</th>\n",
+       "      <td>2019-11-30</td>\n",
+       "      <td>3539</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>501797</th>\n",
+       "      <td>2019-11-30</td>\n",
+       "      <td>3541</td>\n",
+       "      <td>73</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>501798</th>\n",
+       "      <td>2019-11-30</td>\n",
+       "      <td>3542</td>\n",
+       "      <td>37</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              대여일시  대여소번호  count\n",
+       "501796  2019-11-30   3539      3\n",
+       "501797  2019-11-30   3541     73\n",
+       "501798  2019-11-30   3542     37"
+      ]
+     },
+     "execution_count": 267,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bike2019_count.tail(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "bike_count=pd.concat([bike2016_count,bike2017_count,bike2018_count,bike2019_count])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bike_count.reset_index(inplace=True,drop=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1274064"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(bike_count)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "scrolled": true
+   },
+   "source": [
+    "bike_count.to_csv(\"bike_count.csv\",index=False,encoding='euc-kr')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -11441,7 +12118,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
